Update workflow to not use frozen lockfile

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       uses: oven-sh/setup-bun@v1
       with:
         bun-version: latest
-    - run: bun install --frozen-lockfile
+    - run: bun install
     - run: bun run build
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
