Add id and start url in webapp manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,12 @@
 {
   "name": "Carter's RSS Feeds",
   "short_name": "Carter's RSS Feeds",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#FCF5E4",
   "theme_color": "#FCF5E4",
-  "description": "Updates from RSS feeds that Carter likes",
+  "description": "Updates from RSS feeds that Carter likes",  
+  "id": "/",
   "icons": [{
     "sizes": "any",
     "src": "news-emoji.svg",
