--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^5.2.0",
+    "javascript-time-ago": "^2.5.10",
     "node-fetch": "^3.3.1",
     "nunjucks": "^3.2.4",
     "rss-parser": "^3.13.0"
