Deploy when a PR is merged to main

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,9 @@ name: Build feed
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
   schedule:
     - cron: "0 */6 * * *" # At minute 0 past every 6th hour.
 
