Add yazzy url to action definition

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ on:
   schedule:
     - cron: "0 */6 * * *" # At minute 0 past every 6th hour.
 
+env:
+  YAZZY_URL: ${{ env.YAZZY_URL }}
+
 permissions:
   pages: write
   id-token: write
