--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 	"type": "module",
 	"scripts": {
 		"clean": "rm -rf dist",
-		"build": "bun src/index.ts",
-		"check": "biome check --write ./{src,config,public} ./*.json --no-errors-on-unmatched"
+		"build": "NODE_ENV=production bun src/index.ts",
+		"check": "biome check --write ./{src,config,public} ./*.{json,js} --no-errors-on-unmatched",
+		"dev": "bun src/index.ts"
 	},
 	"author": {
 		"name": "George Mandis",
@@ -36,6 +37,7 @@
 		"@types/bun": "latest",
 		"@types/nunjucks": "^3.2.2",
 		"@types/xml2js": "^0.4.11",
+		"tailwindcss": "^3.4.6",
 		"tslib": "^2.5.3",
 		"typescript": "^5.1.3",
 		"typescript-eslint": "^7.13.1"
