--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"@astrojs/tailwind": "^5.1.0",
 		"@extractus/feed-extractor": "^7.1.3",
+		"@github/relative-time-element": "^4.4.3",
 		"astro": "4.15.6"
 	},
 	"devDependencies": {
@@ -38,5 +39,7 @@
 		"tailwindcss": "^3.4.6",
 		"typescript": "^5.1.3"
 	},
-	"trustedDependencies": ["@biomejs/biome"]
+	"trustedDependencies": [
+		"@biomejs/biome"
+	]
 }
