--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"dev": "astro dev",
 		"start": "astro dev",
 		"build": "astro build",
-		"preview": "astro preview"
+		"preview": "astro preview",
+		"prepare": "lefthook install"
 	},
 	"author": {
 		"name": "George Mandis",
@@ -36,10 +37,9 @@
 		"@biomejs/biome": "^1.8.1",
 		"@types/bun": "latest",
 		"@types/xml2js": "^0.4.11",
+		"lefthook": "^1.8.2",
 		"tailwindcss": "^3.4.6",
 		"typescript": "^5.1.3"
 	},
-	"trustedDependencies": [
-		"@biomejs/biome"
-	]
+	"trustedDependencies": ["@biomejs/biome"]
 }
