--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-	"name": "bubo-reader",
+	"name": "rss-reader",
+	"private": true,
 	"version": "2.0.2",
-	"description": "A simple but effective feed reader (RSS, JSON)",
-	"homepage": "https://github.com/georgemandis/bubo-rss",
 	"main": "src/index.ts",
 	"type": "module",
 	"scripts": {
@@ -10,36 +9,23 @@
 		"dev": "astro dev",
 		"start": "astro dev",
 		"build": "astro build",
-		"preview": "astro preview"
-	},
-	"author": {
-		"name": "George Mandis",
-		"email": "george@mand.is",
-		"url": "https://george.mand.is"
-	},
-	"funding": {
-		"type": "github",
-		"url": "https://github.com/sponsors/georgemandis"
-	},
-	"bugs": {
-		"url": "https://github.com/georgemandis/bubo-rss/issues",
-		"email": "george+bubo@mand.is"
+		"preview": "astro preview",
+		"prepare": "lefthook install"
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@astrojs/tailwind": "^5.1.0",
+		"@astrojs/tailwind": "5.1.2",
 		"@extractus/feed-extractor": "^7.1.3",
 		"@github/relative-time-element": "^4.4.3",
-		"astro": "4.15.6"
+		"astro": "4.16.10"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.8.1",
 		"@types/bun": "latest",
 		"@types/xml2js": "^0.4.11",
+		"lefthook": "^1.8.2",
 		"tailwindcss": "^3.4.6",
 		"typescript": "^5.1.3"
 	},
-	"trustedDependencies": [
-		"@biomejs/biome"
-	]
+	"trustedDependencies": ["@biomejs/biome"]
 }
