--- a/package.json
+++ b/package.json
@@ -14,18 +14,24 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@astrojs/tailwind": "5.1.2",
 		"@extractus/feed-extractor": "^7.1.3",
 		"@github/relative-time-element": "^4.4.3",
-		"astro": "4.16.10"
+		"astro": "^5.9.2"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.8.1",
+		"@tailwindcss/vite": "^4.1.8",
 		"@types/bun": "latest",
 		"@types/xml2js": "^0.4.11",
 		"lefthook": "^1.8.2",
-		"tailwindcss": "^3.4.6",
+		"tailwindcss": "^4.1.8",
 		"typescript": "^5.1.3"
 	},
-	"trustedDependencies": ["@biomejs/biome"]
+	"trustedDependencies": [
+		"@biomejs/biome",
+		"@tailwindcss/oxide",
+		"esbuild",
+		"lefthook",
+		"sharp"
+	]
 }
