--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Install, build, and upload your site output
         uses: withastro/action@v2
+        with:
+          package-manager: bun@latest
         env:
           YAZZY_URL: ${{ vars.YAZZY_URL }}
           FEEDS: ${{ vars.FEEDS }}
