--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@extractus/feed-extractor": "^7.1.3",
 		"@github/relative-time-element": "^4.4.3",
-		"astro": "^5.9.2"
+		"astro": "^5.9.2",
+		"feed": "^5.1.0",
+		"rss-parser": "^3.13.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.8.1",
 		"@tailwindcss/vite": "^4.1.8",
 		"@types/bun": "latest",
-		"@types/xml2js": "^0.4.11",
 		"lefthook": "^1.8.2",
 		"tailwindcss": "^4.1.8",
 		"typescript": "^5.1.3"
