--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@github/relative-time-element": "^4.4.3",
 		"astro": "^5.9.2",
+		"entities": "^6.0.1",
 		"feed": "^5.1.0",
 		"rss-parser": "^3.13.0"
 	},
