--- a/biome.json
+++ b/biome.json
@@ -1,9 +1,9 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.1.1/schema.json",
 	"files": {
-		"ignore": [".astro/**"]
+		"includes": ["**", "!**/.astro/**"]
 	},
-	"organizeImports": {
+	"assist": {
 		"enabled": true
 	},
 	"linter": {
@@ -28,9 +28,13 @@
 	},
 	"overrides": [
 		{
-			"include": ["*.svelte", "*.astro", "*.vue"],
+			"includes": ["**/*.svelte", "**/*.astro", "**/*.vue"],
 			"linter": {
 				"rules": {
+					"correctness": {
+						"noUnusedVariables": "off",
+						"noUnusedImports": "off"
+					},
 					"style": {
 						"useConst": "off",
 						"useImportType": "off"
