--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "src/index.ts",
 	"type": "module",
 	"scripts": {
-		"check": "biome check --write ./{src,config,public} ./*.{json,js} --no-errors-on-unmatched",
+		"check": "biome check --write . --no-errors-on-unmatched",
 		"dev": "astro dev",
 		"start": "astro dev",
 		"build": "astro build",
@@ -14,19 +14,19 @@
 	},
 	"license": "MIT",
 	"dependencies": {
-		"@github/relative-time-element": "^4.4.3",
-		"astro": "^5.9.2",
+		"@github/relative-time-element": "^4.4.8",
+		"astro": "^5.11.2",
 		"entities": "^6.0.1",
 		"feed": "^5.1.0",
 		"rss-parser": "^3.13.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.8.1",
-		"@tailwindcss/vite": "^4.1.8",
+		"@biomejs/biome": "^2.1.1",
+		"@tailwindcss/vite": "^4.1.11",
 		"@types/bun": "latest",
-		"lefthook": "^1.8.2",
-		"tailwindcss": "^4.1.8",
-		"typescript": "^5.1.3"
+		"lefthook": "^1.12.2",
+		"tailwindcss": "^4.1.11",
+		"typescript": "^5.8.3"
 	},
 	"trustedDependencies": [
 		"@biomejs/biome",
