--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.1.1/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.2.6/schema.json",
 	"files": {
-		"includes": ["**", "!**/.astro/**"]
+		"includes": ["**", "!**/.astro"]
 	},
 	"assist": {
 		"enabled": true
@@ -9,7 +9,10 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"suspicious": {
+				"noUnknownAtRules": "off"
+			}
 		}
 	},
 	"css": {
