--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
 	"license": "MIT",
 	"dependencies": {
 		"@github/relative-time-element": "^4.4.8",
-		"astro": "^5.13.2",
-		"entities": "^6.0.1",
+		"astro": "^5.14.5",
+		"entities": "^7.0.0",
 		"feed": "^5.1.0",
 		"rss-parser": "^3.13.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.2.0",
-		"@tailwindcss/vite": "^4.1.12",
-		"@types/bun": "latest",
-		"lefthook": "^1.12.3",
-		"tailwindcss": "^4.1.12",
-		"typescript": "^5.9.2"
+		"@biomejs/biome": "^2.2.6",
+		"@tailwindcss/vite": "^4.1.14",
+		"@types/bun": "1.3.0",
+		"lefthook": "^1.13.6",
+		"tailwindcss": "^4.1.14",
+		"typescript": "^5.9.3"
 	},
 	"trustedDependencies": [
 		"@biomejs/biome",
