Resolve linter errors

--- a/biome.json
+++ b/biome.json
@@ -12,6 +12,9 @@
 			"recommended": true,
 			"suspicious": {
 				"noUnknownAtRules": "off"
+			},
+			"complexity": {
+				"noImportantStyles": "off"
 			}
 		}
 	},
