--- a/.astro/settings.json
+++ b/.astro/settings.json
@@ -1,5 +1,8 @@
 {
 	"_variables": {
-		"lastUpdateCheck": 1759508656187
+		"lastUpdateCheck": 1760665987723
+	},
+	"devToolbar": {
+		"enabled": false
 	}
 }
