--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
 	"main": "src/index.ts",
 	"type": "module",
 	"scripts": {
-		"check": "biome check --write . --no-errors-on-unmatched",
+		"check": "prettier --check .",
+		"format": "prettier --write .",
 		"dev": "astro dev",
 		"start": "astro dev",
 		"build": "astro build",
-		"preview": "astro preview",
-		"prepare": "lefthook install"
+		"preview": "astro preview"
 	},
 	"license": "MIT",
 	"dependencies": {
@@ -21,18 +21,16 @@
 		"rss-parser": "^3.13.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.2.6",
 		"@tailwindcss/vite": "^4.1.14",
 		"@types/bun": "1.3.0",
-		"lefthook": "^1.13.6",
+		"prettier": "^3.3.3",
+		"prettier-plugin-astro": "^0.14.1",
 		"tailwindcss": "^4.1.14",
 		"typescript": "^5.9.3"
 	},
 	"trustedDependencies": [
-		"@biomejs/biome",
 		"@tailwindcss/oxide",
 		"esbuild",
-		"lefthook",
 		"sharp"
 	]
 }
